--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+.myInputs ,select{
+padding: 4px 10px;
+border-radius: 4px;
+background: #e2e2e2;
+}
+
+@layer base {
+  :root {
+    --radius: 0.5rem;
   }
 }
